adicionar docs e renomear endpoints

--- a/static/templates/cadastro.tmpl
+++ b/static/templates/cadastro.tmpl
@@ -134,7 +134,7 @@
     <header class="headerNav">
         <h1>Barra de navegação</h1>
     </header>
-    <form class="formulario" method=POST>
+    <form class="formulario" action="/api/cadastro" method=POST>
         <h2>Cadastrar</h2> 
         
         <div class="containerLogin">
