ref. do model de charges e impl. de seu front

--- a/static/templates/vizualizar_charge.tmpl
+++ b/static/templates/vizualizar_charge.tmpl
@@ -26,12 +26,13 @@
         <div class="containerCharge">
             
             <div class="charge">
-                Charges
+			<img src="{{ .charge.URL }}" alt="">
             </div>
 
             <div class="footerCharge">
         
                 <span class="dataCharge">19/09/2025</span>
+				
         
                 <span class="nomeCharge">Nome da charge</span>
         
