implementa painel de admin e migra charges para db

--- a/static/templates/admin.tmpl
+++ b/static/templates/admin.tmpl
@@ -68,6 +68,22 @@
           <button class="btnPrimario" aria-label="Moderar Usuários">Acessar</button>
         </a>
       </article>
+
+	  <article class="cardAcao">
+		  <h3>Adicionar Charge</h3>
+		  <p class="acaoDescricao">Fazer upload de charge diária.</p>
+		  <a href="/admin/adicionar-charge">
+			  <button class="btnPrimario" aria-label="Adicionar Charge">Acessar</button>
+		  </a>
+	  </article>
+
+	  <article class="cardAcao">
+		  <h3>Deletar Charge</h3>
+		  <p class="acaoDescricao">Deletar alguma charge do banco de dados</p>
+		  <a href="/admin/charges">
+			  <button class="btnPrimario" aria-label="Deletar Charge">Acessar</button>
+		  </a>
+	  </article>
     </section>
   </main>
 </body>
