--- a/static/templates/adicionar_charge.tmpl
+++ b/static/templates/adicionar_charge.tmpl
@@ -12,14 +12,53 @@
             color: #333;
         }
         
-        .headerUol, .headerJc, .headerNav {
-            background-color: #eee;
-            padding: 10px 20px;
-            border-bottom: 1px solid #ddd;
+        .headerUol {
+            background: rgb(38, 38, 38);
+            top: 0;
+            position: fixed;
+            width: 100%;
+            text-align: center;
+            font-size: xx-small;
+            height: 30px;
+            z-index: 100;
+        }
+
+        .h1Uol {
+            color: white;
+            margin: 0; 
+            padding-top: 5px; 
+        }
+
+        .headerJc {
+            background: rgb(217, 39, 46);
+            width: 100%;
+            height: 130px; 
+            margin-top: 30px; 
+            position: relative;
+        }
+        
+        .logoJc{
+            color: white;
             text-align: center;
         }
-        .headerJc {
-            background-color: #e0e0e0;
+        
+        .nomeJc{
+            color: white;
+            text-align: center;
+        }
+        
+        .headerNav {
+            background: rgb(167, 166, 166);
+            height: 40px; 
+            display: flex;
+            align-items: center; 
+            padding: 0 15px; 
+            margin: 0;
+        }
+        
+        body {
+            padding-top: 0; 
+            margin: 0;
         }
         h1 {
             margin: 5px 0;
