--- a/static/templates/index.tmpl
+++ b/static/templates/index.tmpl
@@ -56,6 +56,7 @@
 			min-height: 100vh;
             display: flex;
             flex-direction: column;
+            font-family: Arial, sans-serif;
         }
         .imgNoticia{
             background-color: rgb(167, 166, 166);
